--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,20 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-header {
-  background-color: #404040;
-  padding: 1rem;
+.site-container {
+  min-height: 100vh;
 }
-
-header a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
 main {
-  padding: 1rem;
+  flex: 1;
 }
 .products {
   display: flex;
@@ -34,7 +25,7 @@ main {
 
 .product img {
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
 }
 
 .product-info {
