--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,12 +12,19 @@ body {
 main {
   flex: 1;
 }
+.btn-primary {
+  background-color: #ffc000;
+  color: #000;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
+.rating span {
+  color: #ffc000;
+}
 .product {
   border: 1px solid #404040;
   margin: 1rem;
